--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DATABASE_BACKUP_ENABLED=True
 
 # Configurações de API (futuro)
 OPENAI_API_KEY=your-openai-api-key-here
+DEEPSEEK_API_KEY=sk-8a4c5a708b364969a17bbfd55b7f5065
 FATSECRET_CLIENT_ID=your-fatsecret-client-id
 FATSECRET_CLIENT_SECRET=your-fatsecret-client-secret
 
