Agente pré desenvolvido

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,15 @@ FLASK_DEBUG=True
 DATABASE_PATH=database/shapemate.db
 DATABASE_BACKUP_ENABLED=True
 
-# Configurações de API (futuro)
+# APIs de IA
 OPENAI_API_KEY=your-openai-api-key-here
 DEEPSEEK_API_KEY=sk-8a4c5a708b364969a17bbfd55b7f5065
+
+# APIs de Nutrição
+# USDA FoodData Central API (Gratuita - obter chave em: https://fdc.nal.usda.gov/api-guide.html)
+USDA_API_KEY=kXeIgApXiSfLZ2UNHA2GeukxK7AzAluPoi8ERejl
+
+# APIs Legadas (não mais utilizadas)
 FATSECRET_CLIENT_ID=your-fatsecret-client-id
 FATSECRET_CLIENT_SECRET=your-fatsecret-client-secret
 
